--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,39 @@
   <url>http://chicagofoodtrucklocator.appspot.com</url>
   <repositories>
     <repository>
+      <id>Sonatype-public</id>
+      <name>SnakeYAML repository</name>
+      <url>http://oss.sonatype.org/content/groups/public/</url>
+    </repository>
+    <repository>
       <id>maven2-repository.dev.java.net</id>
       <name>Java.net Repository for Maven</name>
       <url>http://download.java.net/maven/2/</url>
       <layout>default</layout>
     </repository>
+    <repository>
+      <id>twitter4j.org</id>
+      <name>twitter4j.org Repository</name>
+      <url>http://twitter4j.org/maven2</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
   </repositories>
   <dependencies>
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <version>1.9-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+         <groupId>org.twitter4j</groupId>
+         <artifactId>twitter4j-core</artifactId>
+         <version>[2.2,)</version>
+     </dependency>
     <dependency>
       <groupId>com.google</groupId>
       <artifactId>appengine-local-runtime-shared</artifactId>
@@ -28,7 +54,6 @@
       <groupId>com.google</groupId>
       <artifactId>appengine-api-1.0-sdk</artifactId>
       <version>1.5.1</version>
-      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.tomcat</groupId>
