Added google calendar support

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>net.andrewviolette.foodtrucklocator</groupId>
+  <groupId>foodtruck</groupId>
   <artifactId>foodtrucklocator</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
@@ -54,6 +54,22 @@
       <groupId>com.google</groupId>
       <artifactId>appengine-api-1.0-sdk</artifactId>
       <version>1.5.1</version>
+    </dependency>
+    <!-- installed these manually from the google gdata java client -->
+    <dependency>
+      <groupId>com.google.gdata</groupId>
+      <artifactId>gdata-calendar</artifactId>
+      <version>2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.gdata</groupId>
+      <artifactId>gdata-core</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.gdata</groupId>
+      <artifactId>gdata-client</artifactId>
+      <version>1.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.tomcat</groupId>
