--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,10 @@
   <url>http://chicagofoodtrucklocator.appspot.com</url>
   <repositories>
     <repository>
+      <id>geocoder-java</id>
+      <url>https://geocoder-java.googlecode.com/svn/mavenrepo</url>
+    </repository>
+    <repository>
       <id>Sonatype-public</id>
       <name>SnakeYAML repository</name>
       <url>http://oss.sonatype.org/content/groups/public/</url>
@@ -40,10 +44,10 @@
       <version>1.9-SNAPSHOT</version>
     </dependency>
     <dependency>
-         <groupId>org.twitter4j</groupId>
-         <artifactId>twitter4j-core</artifactId>
-         <version>[2.2,)</version>
-     </dependency>
+      <groupId>org.twitter4j</groupId>
+      <artifactId>twitter4j-core</artifactId>
+      <version>[2.2,)</version>
+    </dependency>
     <dependency>
       <groupId>com.google</groupId>
       <artifactId>appengine-local-runtime-shared</artifactId>
@@ -133,6 +137,16 @@
     <dependency>
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
+      <version>1.6</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-json</artifactId>
+      <version>1.6</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-client</artifactId>
       <version>1.6</version>
     </dependency>
   </dependencies>
