Added pie machine.

--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -47,6 +47,7 @@ id: gaztrowagon
 twitter: wherezthewagon
 name: Gaztro Wagon
 categories: American
+url: http://www.gaztro-wagon.com/
 iconUrl: https://si0.twimg.com/profile_images/781557064/GaztroWagon_B_B_Stacked_normal.png
 strategy:
   type: calendar
@@ -128,6 +129,14 @@ twitter: gigisbakeshop
 name: Gigis Bake Shop
 categories: Cupcake
 iconUrl: https://twimg0-a.akamaihd.net/profile_images/1503976385/GiGI_TAG_v07_normal.jpg
+strategy:
+  type: calendar
+---
+id: thepiemachine
+twitter: thepiemachine
+name: The Pie Machine
+categories: Pies
+iconUrl: http://a1.twimg.com/profile_images/1428015678/Logo_Design_normal.png
 strategy:
   type: calendar
 
