--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -147,4 +147,12 @@ categories: Desserts
 iconUrl: https://twimg0-a.akamaihd.net/profile_images/1416523084/profile_normal.jpg
 strategy:
   type: calendar
+---
+id: homagesf
+twitter: homagesf
+name: Homage Street Food
+categories: Food
+iconUrl: https://twimg0-a.akamaihd.net/profile_images/1491944244/logo_orange_and_black_twit_normal.jpg
+strategy:
+  type: calendar
 
