Added url for homage street food

--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -150,6 +150,7 @@ strategy:
 ---
 id: homagesf
 twitter: homagesf
+url: http://homagestreetfood.com/
 name: Homage Street Food
 categories: Food
 iconUrl: https://twimg0-a.akamaihd.net/profile_images/1491944244/logo_orange_and_black_twit_normal.jpg
