--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -178,7 +178,7 @@ strategy:
 id: culture
 twitter: culture
 url: http://cultureyogurt.com
-name: Culture Yougart
+name: Culture Yogurt
 categories: Dessert
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1484907277/logosmall_normal.jpg
 strategy:
