--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -202,4 +202,11 @@ name: The Wagyu Wagon
 categories: Food
 url: http://www.thewagyuwagon.com
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1310282168/D_2_WagyuWagon_ID_Identity_normal.jpg
+---
+id: flavor180
+twitter: flavor180
+name: Flavor180
+categories: Food
+url: http://www.flavor180.com
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1252308145/flavor-new_normal.jpg
 
