Added fido to go

--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -209,4 +209,11 @@ name: Flavor180
 categories: Food
 url: http://www.flavor180.com
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1252308145/flavor-new_normal.jpg
+---
+id: fidotogo
+twitter: fidotogo
+name: Fido To Go
+categories: Dog Food
+url: http://www.fidotogo.net
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1344354728/truck4profile_normal.jpg
 
