Added bayou expres, flirty cupcakes jr., and zullos

--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -216,4 +216,29 @@ name: Fido To Go
 categories: Dog Food
 url: http://www.fidotogo.net
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1344354728/truck4profile_normal.jpg
+---
+id: zullosfoodtruck
+twitter: zullosfoodtruck
+name: Zullo's Cibo Italiano
+categories: Italian
+url: http://www.zullosinc.com
+iconUrl: http://a2.twimg.com/profile_images/1472969323/logozullo_normal.jpg
+---
+id: flirtycupcakes2
+twitter: firtycupcakes
+name: Flirty Jr.
+categories: Desserts
+url: http://www.flirtycupcakes.com/
+iconUrl: http://si0.twimg.com/profile_images/720492263/small_logo_normal.jpg
+---
+id: bayouexpress
+twitter: mobilefoodunit
+name: Bayoun Express
+categories: Cajun
+url: http://www.mobilefoodunit.com
+iconUrl: https://twimg0-a.akamaihd.net/profile_images/1393048160/mfuLOGO_normal.png
+
+
+
+
 
