--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -237,6 +237,14 @@ name: Bayoun Express
 categories: Cajun
 url: http://www.mobilefoodunit.com
 iconUrl: https://twimg0-a.akamaihd.net/profile_images/1393048160/mfuLOGO_normal.png
+---
+id: chickpeadelight
+twitter: chickpeadelight
+name: Chickpea Delights
+categories: Food
+url: http://www.chickpeadelights.com
+iconUrl: https://twimg0-a.akamaihd.net/profile_images/1525691204/logo_small_normal.jpg
+
 
 
 
