Added URL for bergsteins

--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -160,6 +160,7 @@ id: bergsteinsny
 twitter: bergsteinsny
 name: Bergstein's NY Deli
 categories: Food
+url: http://www.bergsteinsdeli.com/foodtruck.php
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1187497687/twitter_normal.jpg
 ---
 id: smgfoodtruck
