--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -252,6 +252,13 @@ name: Keifer Truck
 categories: yogurt
 url: http://www.starfruitcafe.com
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1432329264/starfruittruck_normal.JPG
+---
+id: chitowntamale
+twitter: chitowntamale
+name: The Tamale Guy
+categories: Mexican
+url: http://www.chitowntamale.com/
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1524643784/tamale_guy_flyer_FRONT_normal.jpg
 
 
 
