Added Brown Sugar Cafe and Ja Grill On The Go

--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -259,6 +259,26 @@ name: The Tamale Guy
 categories: Mexican
 url: http://www.chitowntamale.com/
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1524643784/tamale_guy_flyer_FRONT_normal.jpg
+---
+id: jagrillonthego
+twitter: jagrillonthego
+name: Ja Grill On The Go
+categories: Jamaican
+url: http://www.jagrill.com
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1460964594/037_normal.JPG
+---
+id: meatloafagogo
+twitter: meatloafagogo
+name: Meatloaf-a-go-go
+categories: Savory
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1562762202/gogorectangle_normal.png
+---
+id: brownsugar_cafe
+twitter: brownsugar_cafe
+name: Brown Sugar Cafe
+categories: Sweet
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1540568772/cupcake_1_normal.jpg
+
 
 
 
