Added Brown Sugar Cafe and Ja Grill On The Go

--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -273,7 +273,7 @@ name: Meatloaf-a-go-go
 categories: Savory
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1562762202/gogorectangle_normal.png
 ---
-id: brownsugar_cafe
+id: brownsugarcafe
 twitter: brownsugar_cafe
 name: Brown Sugar Cafe
 categories: Sweet
