--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -278,6 +278,13 @@ twitter: brownsugar_cafe
 name: Brown Sugar Cafe
 categories: Sweet
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1540568772/cupcake_1_normal.jpg
+---
+id: hummingbirdtogo
+twitter: hummingbirdtogo
+name: Heather Behm
+categories: Savory
+iconUrl: https://twimg0-a.akamaihd.net/profile_images/1268230955/IMG_6734_copy_normal.jpg
+
 
 
 
