--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -234,7 +234,7 @@ iconUrl: http://si0.twimg.com/profile_images/720492263/small_logo_normal.jpg
 ---
 id: bayouexpress
 twitter: mobilefoodunit
-name: Bayoun Express
+name: Bayou Express
 categories: Cajun
 url: http://www.mobilefoodunit.com
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1393048160/mfuLOGO_normal.png
@@ -283,7 +283,13 @@ id: hummingbirdtogo
 twitter: hummingbirdtogo
 name: Heather Behm
 categories: Savory
-iconUrl: https://twimg0-a.akamaihd.net/profile_images/1268230955/IMG_6734_copy_normal.jpg
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1268230955/IMG_6734_copy_normal.jpg
+---
+id: donrafafoodtruck
+twitter: donraffoodtruck
+name: Don Rafa Food Truck
+categories: Savory
+iconUrl: http://twimg0-a.akamaihd.net/sticky/default_profile_images/default_profile_1_normal.png
 
 
 
