--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -325,6 +325,12 @@ twitter: donraffoodtruck
 name: Don Rafa Food Truck
 categories: Savory
 iconUrl: http://twimg0-a.akamaihd.net/sticky/default_profile_images/default_profile_1_normal.png
+---
+id: lilliesqchicago
+twitter: lillieqschicago
+name: Lillies Q Chicago
+categories: Savory
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1317636505/NewLilliesQlogo_normal.jpg
 
 
 
