Added puffs of doom

--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -331,6 +331,12 @@ twitter: lillieqschicago
 name: Lillies Q Chicago
 categories: Savory
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1317636505/NewLilliesQlogo_normal.jpg
+---
+id: puffsofdoom
+twitter: puffsofdoom
+name: Puffs of Doom
+categories: Sweet
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1340187108/Logo_Final_normal.png
 
 
 
