Added big star truck and removed cront entry

--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -337,6 +337,19 @@ twitter: puffsofdoom
 name: Puffs of Doom
 categories: Sweet
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1340187108/Logo_Final_normal.png
+---
+id: sweetspotmac
+twitter: sweetspotmac
+name: Sweet Spot Macaroons
+url: http://www.sweetspotmacarons.com
+categories: Sweet
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1514611309/Logo_SweetSpotMac_Block4C_Avatar_normal.jpg
+---
+id: bigstartruck
+twitter: bigstartruck
+name: Big Star Food Truck
+categories: Savory
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1583844537/bigstar_star_normal.gif
 
 
 
