--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -291,7 +291,7 @@ twitter: chitowntamale
 name: The Tamale Guy
 categories: Mexican
 url: http://www.chitowntamale.com/
-iconUrl: http://twimg0-a.akamaihd.net/profile_images/1524643784/tamale_guy_flyer_FRONT_normal.jpg
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1584003648/download_normal.jpg
 foursquare: 4e834b6f722e73eaf4938516
 ---
 id: jagrillonthego
@@ -349,11 +349,4 @@ id: bigstartruck
 twitter: bigstartruck
 name: Big Star Food Truck
 categories: Savory
-iconUrl: http://twimg0-a.akamaihd.net/profile_images/1583844537/bigstar_star_normal.gif
-
-
-
-
-
-
-
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/733151570/ComingSoon_normal.png
