--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -240,6 +240,14 @@ url: http://www.flavor180.com
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1252308145/flavor-new_normal.jpg
 foursquare: 4e2f8e2c8130c05c18cefbef
 ---
+id: flavor1802
+twitter: flavor180
+name: Flavor180
+categories: Food
+url: http://www.flavor180.com
+iconUrl: http://twimg0-a.akamaihd.net/profile_images/1252308145/flavor-new_normal.jpg
+foursquare: 4e2f8e2c8130c05c18cefbef
+---
 id: fidotogo
 twitter: fidotogo
 name: Fido To Go
