--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -293,6 +293,7 @@ name: Keifer Truck
 categories: yogurt
 url: http://www.starfruitcafe.com
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1432329264/starfruittruck_normal.JPG
+twittalyzer: "on"
 ---
 id: chitowntamale
 twitter: chitowntamale
@@ -301,6 +302,7 @@ categories: Mexican
 url: http://www.chitowntamale.com/
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/1584003648/download_normal.jpg
 foursquare: 4e834b6f722e73eaf4938516
+twittalyzer: "on"
 ---
 id: jagrillonthego
 twitter: jagrillonthego
