Added steakwch truck

--- a/src/main/resources/trucks.yaml
+++ b/src/main/resources/trucks.yaml
@@ -358,3 +358,9 @@ twitter: bigstartruck
 name: Big Star Food Truck
 categories: Savory
 iconUrl: http://twimg0-a.akamaihd.net/profile_images/733151570/ComingSoon_normal.png
+---
+id: steakwch
+twitter: steakwch
+name: Steakwch
+categories: Savory
+iconUrl: http://a1.twimg.com/profile_images/1443279567/Twitter_Pic_normal.JPG
